# ot_in_linear_ica

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: readme.txt
code/: readme.txt
exp/: FastICA_failure_modes.ipynb  FastICA_failure_modes_vs_OT_ICA.ipynb  OT-ICA_EEG_Artifact_application.ipynb  OT-ICA_Methodology_Validation.ipynb  OT-ICA_W1_vs_W2.ipynb  OT-ICA_causal_discovery_application.ipynb  OT-ICA_price_discovery_application.ipynb  OT-ICA_stiefel_vs_FastICA_scaling.ipynb  OT-ICA_vs_FasICA_hybrid_and_discrete_dist_ablation_study.ipynb  OT_ICA_high_dim_bad_ic_test.ipynb  OT_natural_grad_vs_FastICA.ipynb  OT_stiefel_manifold_vs_FastICA.ipynb  OT_vs_FastICA_dim_samsize_symmOrtho.ipynb  OT_vs_FastICA_lbgfs.ipynb  OT_vs_FastICA_sim_samsize_grid.ipynb  OT_vs_FastICA_sinkhorn_sgd_&_lbgfs.ipynb  OT_vs_fast_ICA_over_dim_and_samsize.ipynb  Sachs2005.txt  Sachs2005_CITATION.md  TPM2026_workshop_paper_figures.ipynb  algo_enhance_figures.py  causal_comp_analysis_application.ipynb  discrete&continous_OT_vs_Fast_ICA.ipynb  discrete_or_gaussain_ablation_study.ipynb  econometrics_application.ipynb  general_discrete_dist_060326.ipynb  requirements.txt  sim_high_4_dim_continous.ipynb  sim_single_ic_continous_laplace.ipynb  sim_single_ic_continous_student_t.ipynb  sim_single_ic_discrete_bernoulli.ipynb  sim_single_ic_extract_continous.ipynb  sim_single_ic_extract_discrete.ipynb  sim_two_ics_continous_lapl_stud_t.ipynb  simulated_single_ic_extraction.ipynb  tpm2026_figures.ipynb  tpm2026_figures.py  w1_vs_w2_figure.py
exp/other/: FastICA_failure_modes_vs_OT_ICA.ipynb  OT_fixed_pt_vs_FastICA.ipynb  OT_vs_FastICA_lbgfs.ipynb  (+13 more)
report/: references.bib  thesis_main.blg  thesis_main.fdb_latexmk  thesis_main.fls  thesis_main.lof  thesis_main.lot  thesis_main.tex
short_ppt/: SCRIPT.md  index.html
slides/: main.aux  main.bbl  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc
uai_workshop/: references.bib  tpm2026-template.bib  tpm2026-template.tex  tpm2026_ot_in_linear_ica.tex
(+20 files in other folders)
